# deltona

./: .pre-commit-config.yaml  .readthedocs.yaml  .wiswa.jsonnet  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pyproject.toml  sh.tat.deltona.yml  snapcraft.yaml
.claude/: settings.local.json.dist
.claude/agents/: click-auditor.md  copy-editor.md  coverage-improver.md  docstring-fixer.md  markdownlint-fixer.md  mypy-fixer.md  python-expert.md  python-moderniser.md  qa-fixer.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.cursor/rules/: markdown.mdc  python-tests.mdc  python.mdc
.github/instructions/: general.instructions.md  markdown.instructions.md  python-tests.instructions.md  python.instructions.md
.github/workflows/: appimage.yml  flatpak.yml  publish.yml  pyinstaller.yml  qa.yml  release.yml  snap.yml  tests.yml
deltona/: __init__.py  adp.py  chromium.py  commands.py  constants.py  gentoo.py  git.py  io.py  main.py  media.py  naming.py  refactor.py  string.py  system.py  typing.py  ultraiso.py  utils.py  windows.py  www.py
deltona/commands/: admin.py  desktop.py  git.py  main.py  media.py  misc.py  string.py  wine.py  www.py
docs/: badges.rst  conf.py  index.rst
docs/commands/admin/: clean-old-kernels-modules.rst  htmltree.rst  kconfig-to-commands.rst  kconfig-to-json.rst  patch-bundle.rst  slug-rename.rst  smv.rst  systemd-reset-tpm-enrollments.rst
docs/commands/desktop/: connect-g603.rst  inhibit-notifications.rst  kill-gamescope.rst  mpv-sbs.rst  umpv.rst  upload-to-imgbb.rst
docs/commands/git/: git-checkout-default-branch.rst  git-co-default-branch.rst  git-open.rst  git-rebase-default-branch.rst  merge-dependabot-prs.rst
docs/commands/media/: add-cdda-times.rst  add-info-json.rst  audio2vid.rst  cddb-query.rst  display-info-json.rst  encode-dashcam.rst  flac-album.rst  flac-artist.rst  flac-dir-finalize.rst  flac-genre.rst  flac-title.rst  flac-track.rst  flac-year.rst  flacted.rst  hlg2sdr.rst  ke-ebook-ex.rst  mp4json-display.rst  mp4json.rst  mvid-rename.rst  ripcd.rst  show-info-json.rst  supported-audio-input-formats.rst  tbc2srt.rst  uiso.rst  wait-for-disc.rst
docs/commands/misc/: adp.rst  burnrariso.rst  gogextract.rst  unpack-0day.rst
docs/commands/string/: cssq.rst  fullwidth2ascii.rst  is-ascii.rst  is-bin.rst  json2yaml.rst  netloc.rst  pl2json.rst  sanitize.rst  slugify.rst  title-fixer.rst  trim.rst  ucwords.rst  underscorize.rst  urldecode.rst
docs/commands/wine/: kill-wine.rst  mkwineprefix.rst  patch-uiso-font.rst  set-wine-fonts.rst  unix2wine.rst  unregister-wine-assocs.rst  winegoginstall.rst  wineshell.rst
docs/commands/www/: check-bookmarks-html.rst  chrome-bisect-flags.rst  fix-pwa-icon.rst  where-from.rst
man/: deltona.1
tests/: conftest.py  test_admin_commands.py  test_adp.py  test_chromium.py  test_desktop_commands.py  test_gentoo.py  test_git.py  test_git_commands.py  test_io.py  test_main_command.py  test_media.py  test_media_commands.py  test_misc_commands.py  test_naming.py  test_refactor.py  test_string.py  test_string_commands.py  test_system.py  test_typing.py  test_ultraiso.py  test_utils.py  test_windows.py  test_wine_commands.py  test_www.py  test_www_commands.py
