[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "commitizen>=4.13.9",
  "cz-path>=0.0.6",
  "mypy>=1.19.1",
  "pydbus-stubs>=0",
  "ruff>=0.15.8",
  "types-beautifulsoup4>=4.12.0.20250516",
  "types-binaryornot>=0.4.0.20260309",
  "types-paramiko>=4.0.0.20260322",
  "types-pexpect>=4.9.0.20260127",
  "types-pillow>=10.2.0.20240822",
  "types-psutil>=7.2.2.20260130",
  "types-pyperclip>=1.11.0.20260216",
  "types-pyyaml>=6.0.12.20250915",
  "types-send2trash>=2.1.0.20260117",
  "types-yt-dlp>=2026.3.17.20260318",
  "yapf>=0.43.0",
]
docs = [
  "autodoc-pydantic>=2.2.0",
  "doc8>=2.0.0",
  "docutils<0.22",
  "enum-tools[sphinx]>=0.13.0",
  "esbonio>=1.1.0",
  "numpydoc>=1.10.0",
  "restructuredtext-lint>=2.0.2",
  "sphinx-click>=6.2.0",
  "sphinx-datatables>=1.0.0",
  "sphinx-immaterial>=0.13.9",
  "sphinx>=9.1.0; python_version >= \"3.13\"",
  "tomlkit>=0.14.0",
]
tests = [
  "coveralls>=4.1.0",
  "mock>=5.2.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.2",
]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Desktop Environment",
  "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
  "Topic :: File Formats",
  "Topic :: Games/Entertainment",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Multimedia",
  "Topic :: System :: Hardware",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "anyio>=4.9.0",
  "async-lru>=2.0.5",
  "bascom>=0.1.2",
  "binaryornot>=0.6.0",
  "click>=8.3.1",
  "niquests>=3.18.2",
  "typing-extensions>=4.15.0",
]
description = "A lot of uncategorised utilities."
keywords = ["bluetooth", "command line", "file management", "git", "multimedia"]
license = "MIT"
name = "deltona"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.1.4"

[[project.authors]]
email = "audvare@gmail.com"
name = "Andrew Udvare"

[project.optional-dependencies]
admin = ["paramiko>=4.0.0"]
desktop = [
  "pydbus>=0.6.0; sys_platform == 'linux'",
  "pygobject>=3.56.2; sys_platform == 'linux'",
  "pyperclip>=1.11.0",
]
git = ["gitpython>=3.1.46", "keyring>=25.7.0", "pygithub>=2.9.0"]
media = ["keyring>=25.7.0", "mutagen>=1.47.0", "platformdirs>=4.9.4", "send2trash>=2.1.0"]
string = ["pyyaml>=6.0.3", "unidecode>=1.4.0", "yt-dlp>=2026.3.17"]
wine = ["pexpect>=4.9.0", "platformdirs>=4.9.4", "psutil>=7.2.2", "python-xz>=0.6.0"]
www = ["beautifulsoup4>=4.14.3", "html5lib>=1.1", "keyring>=25.7.0", "pillow>=12.1.1"]

[project.scripts]
add-cdda-times = "deltona.commands.media:add_cdda_times_main"
add-info-json = "deltona.commands.media:add_info_json_main"
adp = "deltona.commands.misc:adp_main"
audio2vid = "deltona.commands.media:audio2vid_main"
burnrariso = "deltona.commands.misc:burnrariso_main"
cddb-query = "deltona.commands.media:cddb_query_main"
check-bookmarks-html = "deltona.commands.www:check_bookmarks_html_main"
chrome-bisect-flags = "deltona.commands.www:chrome_bisect_flags_main"
clean-old-kernels-modules = "deltona.commands.admin:clean_old_kernels_and_modules_main"
connect-g603 = "deltona.commands.desktop:connect_g603_main"
cssq = "deltona.commands.string:cssq_main"
deltona = "deltona.commands.main:main"
display-info-json = "deltona.commands.media:display_info_json_main"
encode-dashcam = "deltona.commands.media:encode_dashcam_main"
fix-pwa-icon = "deltona.commands.www:fix_chromium_pwa_icon_main"
flac-dir-finalize = "deltona.commands.media:flac_dir_finalize_main"
fullwidth2ascii = "deltona.commands.string:fullwidth2ascii_main"
git-checkout-default-branch = "deltona.commands.git:git_checkout_default_branch_main"
git-co-default-branch = "deltona.commands.git:git_checkout_default_branch_main"
git-open = "deltona.commands.git:git_open_main"
git-rebase-default-branch = "deltona.commands.git:git_rebase_default_branch_main"
gogextract = "deltona.commands.misc:gogextract_main"
hlg2sdr = "deltona.commands.media:hlg2sdr_main"
htmltree = "deltona.commands.admin:generate_html_dir_tree_main"
inhibit-notifications = "deltona.commands.desktop:inhibit_notifications_main"
is-ascii = "deltona.commands.string:is_ascii_main"
is-bin = "deltona.commands.string:is_bin_main"
json2yaml = "deltona.commands.string:json2yaml_main"
kconfig-to-commands = "deltona.commands.admin:kconfig_to_commands_main"
kconfig-to-json = "deltona.commands.admin:kconfig_to_json_main"
ke-ebook-ex = "deltona.commands.media:ke_ebook_ex_main"
kill-gamescope = "deltona.commands.desktop:kill_gamescope_main"
kill-wine = "deltona.commands.wine:kill_wine_main"
merge-dependabot-prs = "deltona.commands.git:merge_dependabot_prs_main"
mp4json = "deltona.commands.media:add_info_json_main"
mp4json-display = "deltona.commands.media:display_info_json_main"
mpv-sbs = "deltona.commands.desktop:mpv_sbs_main"
mvid-rename = "deltona.commands.media:mvid_rename_main"
netloc = "deltona.commands.string:urldecode_main"
patch-bundle = "deltona.commands.admin:patch_bundle_main"
patch-uiso-font = "deltona.commands.wine:patch_ultraiso_font_main"
pl2json = "deltona.commands.string:pl2json_main"
sanitize = "deltona.commands.string:sanitize_main"
set-wine-fonts = "deltona.commands.wine:set_wine_fonts_main"
show-info-json = "deltona.commands.media:display_info_json_main"
slug-rename = "deltona.commands.admin:slug_rename_main"
slugify = "deltona.commands.string:slugify_main"
smv = "deltona.commands.admin:smv_main"
supported-audio-input-formats = "deltona.commands.media:supported_audio_input_formats_main"
systemd-reset-tpm-cryptenroll = "deltona.commands.admin:reset_tpm_enrollments_main"
tbc2srt = "deltona.commands.media:tbc2srt_main"
title-fixer = "deltona.commands.string:title_fixer_main"
trim = "deltona.commands.string:trim_main"
ucwords = "deltona.commands.string:ucwords_main"
uiso = "deltona.commands.media:ultraiso_main"
umpv = "deltona.commands.desktop:umpv_main"
underscorize = "deltona.commands.string:underscorize_main"
unix2wine = "deltona.commands.wine:unix2wine_main"
unpack-0day = "deltona.commands.misc:unpack_0day_main"
unregister-wine-assocs = "deltona.commands.wine:unregister_wine_file_associations_main"
upload-to-imgbb = "deltona.commands.desktop:upload_to_imgbb_main"
urldecode = "deltona.commands.string:urldecode_main"
wait-for-disc = "deltona.commands.media:wait_for_disc_main"
where-from = "deltona.commands.www:where_from_main"
winegoginstall = "deltona.commands.wine:winegoginstall_main"
wineshell = "deltona.commands.wine:wineshell_main"

[project.urls]
Issues = "https://github.com/Tatsh/deltona/issues"
documentation = "https://deltona.readthedocs.org"
homepage = "https://tatsh.github.io/deltona/"
repository = "https://github.com/Tatsh/deltona"

[tool.commitizen]
name = "cz_path"
remove_path_prefixes = ["deltona", "include", "src"]
tag_format = "v$version"
version_files = [
  ".wiswa.jsonnet",
  "CITATION.cff",
  "README.md",
  "deltona/__init__.py",
  "docs/badges.rst",
  "docs/index.rst",
  "man/deltona.1",
  "package.json",
  "snapcraft.yaml",
]
version_provider = "pep621"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
omit = ["conftest.py", "tests.py", "tests/*/test_*.py", "tests/test_*.py"]
show_missing = true

[tool.coverage.run]
branch = true
omit = ["conftest.py", "tests.py", "tests/*/test_*.py", "tests/test_*.py"]

[tool.doc8]
max-line-length = 100

[tool.mypy]
cache_dir = "~/.cache/mypy"
explicit_package_bases = true
platform = "linux"
python_version = "3.10"
show_column_numbers = true
strict = true
strict_optional = true
warn_unreachable = true

[tool.pyright]
deprecateTypingAliases = true
enableExperimentalFeatures = true
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
include = ["./deltona", "./tests"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImportCycles = "error"
reportMissingModuleSource = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "none"
typeCheckingMode = "off"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
filterwarnings = ["ignore::async_lru.AlruCacheLoopResetWarning"]
mock_use_standalone_module = true
norecursedirs = ["node_modules"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
force-exclude = true
line-length = 100
namespace-packages = ["docs", "tests"]
target-version = "py310"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "ANN401",
  "COM812",
  "CPY001",
  "D201",
  "D203",
  "D204",
  "D212",
  "DOC201",
  "N818",
  "S101",
  "S404",
  "S603",
  "TD002",
  "UP046",
  "UP047",
]
preview = true

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types", "typing"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
from-first = true
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-locals = 20
max-nested-blocks = 6
max-positional-args = 15
max-public-methods = 30
max-returns = 10
max-statements = 150

[tool.uv]
default-groups = ["dev"]

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 100
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = false
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = true
no_spaces_around_selected_binary_operators = false
space_between_ending_comma_and_closing_bracket = false
spaces_around_default_or_named_assign = false
spaces_around_power_operator = true
spaces_before_comment = 2
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = false
split_penalty_after_opening_bracket = 30
split_penalty_after_unary_operator = 10000
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false

[tool.yapfignore]
ignore_patterns = [".venv/**", "node_modules/**"]
